--- a/homework-five/scss/footer.scss
+++ b/homework-five/scss/footer.scss
@@ -34,7 +34,7 @@ footer{
             }
 
             @media only screen and (max-width: 500px){
-                margin-left: 26px;
+                // margin-left: 26px;
             }
         }
 
@@ -47,8 +47,9 @@ footer{
 
             @media only screen and (max-width: 500px){
                 font-size: 8px;
-                margin: 0 auto;
-                margin-bottom: -70px;
+                // margin: 0 auto;
+                // margin-bottom: -70px;
+                margin: auto -70px 10px;
             }
         }
 
@@ -60,8 +61,9 @@ footer{
                 font-size: 22px;
 
                 @media only screen and (max-width: 500px) {
-                    font-size: 30px;
-                    margin-right: 14px;
+                    font-size: 40px;
+                    // margin-right: 14px;
+                    margin-left: 10px;
                 }
             }
 
@@ -72,12 +74,12 @@ footer{
             }
 
             @media only screen and (max-width: 500px) {
-                flex-wrap: wrap;
-                flex-direction: column;
                 display: flex;
                 align-items: center;
                 // margin: 0;
-                margin-right: 40px;
+                // margin-right: 40px;
+                // margin-right: -40px;
+                margin-right: 0;
                 
                 
             }
